# nes_emulator

./: CMakeLists.txt  LICENSE
include/: bus.h  log.h  nes6502.h  rom.h
src/: bus.c  log.c  main.c  nes6502.c  ppu.c  rom.c  ui.c
test/: CMakeLists.txt  test.c
